--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Sean DG | Web Developer</title>
     </head>
     <body>
-        <div id="root" class="flex min-h-screen flex-col font-main"></div>
+        <div id="root" class="flex flex-col font-main"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
