--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
         <title>Sean DG | Web Developer</title>
     </head>
     <body>
-        <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+        <form
+            name="contact"
+            netlify
+            netlify-honeypot="bot-field"
+            data-netlify-recaptcha="true"
+            hidden
+        >
             <input type="hidden" name="form-name" value="contact" />
             <input type="text" name="name" />
             <input type="email" name="email" />
