--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
         <title>Sean DG | Web Developer</title>
     </head>
     <body>
+        <form
+            hidden
+            name="contact"
+            method="post"
+            data-netlify="true"
+            data-netlify-honeypot="bot-field"
+            data-netlify-recaptcha="true"
+        >
+            <!-- for netlify form detection and spam detection -->
+            <input type="hidden" name="form-name" value="contact" />
+            <div hidden>
+                <input name="bot-field" />
+            </div>
+            <!-- for netlify form detection and spam detection -->
+
+            <input type="text" name="name" />
+
+            <input name="email" type="email" />
+            <textarea name="message"></textarea>
+
+            <div data-netlify-recaptcha="true"></div>
+        </form>
+
         <div id="root" class="flex flex-col font-main"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
