added netlify form submission 12

--- a/index.html
+++ b/index.html
@@ -8,18 +8,13 @@
         <title>Sean DG | Web Developer</title>
     </head>
     <body>
-        <form
-            name="contact"
-            netlify
-            netlify-honeypot="bot-field"
-            data-netlify-recaptcha="true"
-            hidden
-        >
+        <form name="contact" netlify netlify-honeypot="bot-field" hidden>
             <input type="hidden" name="form-name" value="contact" />
             <input type="text" name="name" />
             <input type="email" name="email" />
             <textarea name="message"></textarea>
         </form>
+
         <div id="root" class="flex flex-col font-main"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
